[package]
name = "protonup-gui"
version = "0.0.1"
edition = "2021"
authors = ["Auyer <auyer@rcpassos.me>"]
repository = "https://github.com/auyer/protonup-rs"
license = "Apache-2.0"

[dependencies]
futures = "0.3.30"
iced = { version = "0.12.0", features = ["tokio"] }
iced_native = { version = "0.10.3" }
libprotonup = { path = "../libprotonup" }
tokio = { version = "1.36.0", features = ["full"] }
tempfile = "3.10"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls"]
